--- a/looking-glass.html
+++ b/looking-glass.html
@@ -153,9 +153,9 @@
                 </div>
             </div>
         </header>
-        <main class="flex-shrink-0 pb-5 pt-5">
+        <main class="flex-shrink-0 pt-5">
             <div class="container">
-                <div class="align-items-center pb-5" id="search-bar">
+                <div class="align-items-center" id="search-bar">
                     <div class="row d-flex justify-content-center">
                         <div class="col-sm-12 col-md-12 col-xl-9">
                             <div class="card border-0 rounded-0 p-3 shadow-sm search-container" style="z-index: 2 !important; overflow: hidden;">
@@ -272,8 +272,8 @@
 
                 <div class="d-none align-items-center my-5" id="page-traceroute">
                     <div class="row d-flex justify-content-center">
-                        <div class="col-md-9 my-3 p-0 bg-body shadow-sm">
-                            <table class="table table-hover table-responsive mb-0">
+                        <div class="col-sm-12 col-lg-12 col-xl-10 p-0 shadow-sm">
+                            <table class="table table-hover table-responsive mb-0 bg-body">
                                 <thead class="table-dark">
                                     <th>PoP</th>
                                     <th>hops</th>
@@ -287,8 +287,8 @@
 
                 <div class="d-none align-items-center my-5" id="page-bgproute">
                     <div class="row d-flex justify-content-center">
-                        <div class="col-md-9 my-3 p-0 bg-body shadow-sm">
-                            <table class="table table-responsive mb-0">
+                        <div class="col-sm-12 col-lg-12 col-xl-10 p-0 shadow-sm">
+                            <table class="table table-hover table-responsive mb-0 bg-body">
                                 <thead class="table-dark">
                                     <th>PoP</th>
                                 </thead>
@@ -300,8 +300,8 @@
 
                 <div class="d-none align-items-center my-5" id="page-proto">
                     <div class="row d-flex justify-content-center">
-                        <div class="col-md-9 my-3 p-0 bg-body shadow-sm">
-                            <table class="table table-hover table-responsive mb-0">
+                        <div class="col-sm-12 col-lg-12 col-xl-10 p-0 shadow-sm">
+                            <table class="table table-hover table-responsive mb-0 bg-body">
                                 <thead class="table-dark">
                                     <th>PoP</th>
                                     <th class="text-center">import</th>
