--- a/services.html
+++ b/services.html
@@ -136,7 +136,7 @@
                             <div class="card bg-body rounded-0 shadow-sm mb-4" style="z-index: 2 !important; overflow: hidden;">
                                 <div class="card-body">
                                     <h1 class="lh-1">WireGuard VPN</h1>
-                                    <span class="text-muted lh-0">&nbsp;Providing secure worldwide IPv6 tunneling</span>
+                                    <span class="lh-0">&nbsp;Providing secure worldwide IPv6 tunneling</span>
                                     <img class="position-absolute logo-wireguard" style="display: none;" src="/static/images/wireguard.svg" width="400" />
                                     <div class="text-end mt-5">
                                         <h1 class="card-title pricing-card-title">$10<small class="text-muted fw-light">/mo</small></h1>
