refactor: merge all svg files into one file

--- a/services.html
+++ b/services.html
@@ -94,7 +94,7 @@
                             <li>
                                 <a href="/" class="nav-link" id="header-link-dashboard">
                                     <svg class="bi d-block mx-auto mb-1" width="24" height="24">
-                                        <use xlink:href="#speedometer2" />
+                                        <use xlink:href="/static/images/icon.stypr.svg#speedometer2" />
                                     </svg>
                                     Dashboard
                                 </a>
@@ -102,7 +102,7 @@
                             <li>
                                 <a href="/looking-glass.html" class="nav-link" id="header-link-lg">
                                     <svg class="bi d-block mx-auto mb-1" width="24" height="24">
-                                        <use xlink:href="#glass" />
+                                        <use xlink:href="/static/images/icon.stypr.svg#glass" />
                                     </svg>
                                     Looking Glass
                                 </a>
@@ -110,7 +110,7 @@
                             <li>
                                 <a class="nav-link active" id="header-link-services">
                                     <svg class="bi d-block mx-auto mb-1" width="24" height="24">
-                                        <use xlink:href="#ethernet" />
+                                        <use xlink:href="/static/images/icon.stypr.svg#ethernet" />
                                     </svg>
                                     Services
                                 </a>
@@ -118,7 +118,7 @@
                             <li>
                                 <a href="/about.html" class="nav-link" id="header-link-about">
                                     <svg class="bi d-block mx-auto mb-1" width="24" height="24">
-                                        <use xlink:href="#about" />
+                                        <use xlink:href="/static/images/icon.stypr.svg#about" />
                                     </svg>
                                     About
                                 </a>
@@ -210,21 +210,21 @@
                         <li class="ms-3">
                             <a class="text-muted" href="https://twitter.com/stereotype32">
                                 <svg class="bi" width="24" height="24">
-                                    <use xlink:href="#twitter" />
+                                    <use xlink:href="/static/images/icon.stypr.svg#twitter" />
                                 </svg>
                             </a>
                         </li>
                         <li class="ms-3">
                             <a class="text-muted" href="https://github.com/AS400671">
                                 <svg class="bi" width="24" height="24">
-                                    <use xlink:href="#github" />
+                                    <use xlink:href="/static/images/icon.stypr.svg#github" />
                                 </svg>
                             </a>
                         </li>
                         <li class="ms-3">
                             <a class="text-muted" href="https://harold.kim">
                                 <svg class="bi" width="24" height="24">
-                                    <use xlink:href="#house-fill" />
+                                    <use xlink:href="/static/images/icon.stypr.svg#house-fill" />
                                 </svg>
                             </a>
                         </li>
